--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,16 @@ minecraft {
     replace "\${version}", "${config.mod.version}"
 }
 
+jar {
+        manifest {
+		attributes("FMLCorePlugin": "vic.mod.chat.transformer.VchatLoadingPlugin", "FMLCorePluginContainsFMLMod": "true")
+    }
+}
+
+runServer {
+    jvmArgs '-Dfml.coreMods.load=vic.mod.chat.transformer.VchatLoadingPlugin'
+}
+
 processResources {
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
