Add deobfJar and update README.md with fixed build badge

--- a/build.gradle
+++ b/build.gradle
@@ -52,12 +52,19 @@ task apiJar(type: Jar, dependsOn: classes) {
     include 'vic/mod/chat/api/**' 
     classifier = 'api'
 }
+
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
 }
 
+task deobfJar(type: Jar) {
+    from sourceSets.main.output
+    classifier = 'deobf'
+}
+
 artifacts {
     archives sourcesJar
     archives apiJar
+    archives deobfJar
 }
