API version for bots, onTick and a few log methods.

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ minecraft {
 
     replaceIn "Constants.java"
     replace "\${version}", "${config.mod.version}"
+    replace "\${api_version}", "${config.api.version}"
 }
 
 processResources {
