--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 apply plugin: 'forge'
 
 version = modVersion
-group = "vic.mod.chat"
+group = "moe.nightfall.vic.chat"
 archivesBaseName = "vChat"
 
 if (System.env.BUILD_NUMBER != null) version = "$version.$System.env.BUILD_NUMBER"
@@ -39,7 +39,7 @@ processResources {
 
 task apiJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.output
-    include 'vic/mod/chat/api/**' 
+    include 'moe/nightfall/vic/chat/api/**'
     classifier = 'api'
 }
 
