--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,17 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = modVersion
 group = "moe.nightfall.vic.chat"
@@ -24,12 +20,14 @@ archivesBaseName = "vChat"
 if (System.env.BUILD_NUMBER != null) version = "$version.$System.env.BUILD_NUMBER"
 
 minecraft {
-    version = "${mcVersion}-latest"
+    version = "1.8.9-11.15.0.1695"
     runDir = "run"
-
-    replaceIn "Constants.java"
+    
+	replaceIn "Constants.java"
     replace "\${version}", "${modVersion}"
     replace "\${api_version}", "${modAPIVersion}"
+    
+    mappings = "stable_20"
 }
 
 processResources {
