--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-modVersion       = 0.3r18
-modAPIVersion    = 1.3
-mcVersion        = 1.7.10
+modVersion       = 0.4r1
+modAPIVersion    = 1.4
+mcVersion        = 1.8.x
