--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,11 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'forge'
 
 version = modVersion
 group = "moe.nightfall.vic.chat"
@@ -20,7 +20,7 @@ archivesBaseName = "vChat"
 if (System.env.BUILD_NUMBER != null) version = "$version.$System.env.BUILD_NUMBER"
 
 minecraft {
-    version = "1.8.9-11.15.0.1697"
+    version = "1.7.10-10.13.4.1614-1.7.10"
 	if (file('../run').exists()){
 		runDir = "../run"
 	} else {
@@ -30,7 +30,7 @@ minecraft {
     replace "\${version}", "${modVersion}"
     replace "\${api_version}", "${modAPIVersion}"
     
-    mappings = "stable_20"
+    mappings = "stable_12"
 }
 
 processResources {
