Added Twitter links integration and a tutoriel to enable it in the README.md. Also refactored the configuration file. (You're welcome to correct my english if needed, especially for the README.md)

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ minecraft {
     mappings = "stable_20"
 }
 
+dependencies {
+    compile group: "org.twitter4j", name: "twitter4j-core", version: "4.0.4"
+}
+
 processResources {
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
