--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 
@@ -17,10 +17,12 @@ version = modVersion
 group = "moe.nightfall.vic.chat"
 archivesBaseName = "vChat"
 
+sourceCompatibility = targetCompatibility = "1.7"
+
 if (System.env.BUILD_NUMBER != null) version = "$version.$System.env.BUILD_NUMBER"
 
 minecraft {
-    version = "1.8.9-11.15.0.1697"
+    version = "1.11.2-13.20.0.2255"
 	if (file('../run').exists()){
 		runDir = "../run"
 	} else {
@@ -30,7 +32,7 @@ minecraft {
     replace "\${version}", "${modVersion}"
     replace "\${api_version}", "${modAPIVersion}"
     
-    mappings = "stable_20"
+    mappings = "snapshot_20161220"
 }
 
 dependencies {
